green. fix header layout on tablet.

--- a/src/hero/hero.scss
+++ b/src/hero/hero.scss
@@ -1,5 +1,7 @@
 @import "../variables.scss";
 
+$horizontal_breakpoint: 800px;
+
 .hero {
   h1 {
     font-size: 3.5rem;
@@ -24,7 +26,7 @@
     transform: translateY(20px);
     z-index: -1;
 
-    @media all and (min-width: 724px) {
+    @media all and (min-width: $horizontal_breakpoint) {
       transform: translateY(0px);
     }
 
@@ -48,7 +50,7 @@
   header {
     max-width: 30rem;
 
-    @media all and (min-width: 724px) {
+    @media all and (min-width: $horizontal_breakpoint) {
       max-width: unset;
     }
   }
@@ -59,7 +61,7 @@
     }
   }
 
-  @media all and (min-width: 724px) {
+  @media all and (min-width: $horizontal_breakpoint) {
     display: flex;
     justify-content: center;
     padding-top: 4rem;
